--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "nodemon index",
+    "start": "node index",
+    "dev":"nodemon index",
     "debug": "node inspect index.js"
   },
   "keywords": [],
