--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node index",
+    "start": "node --experimental-specifier-resolution=node index",
     "dev":"nodemon index",
     "debug": "node inspect index.js"
   },
